2005-10-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/hotplug/libsane.usermap: Added Epson Stylus DX3850 (from
	  niels_kalle <niels_kalle@web.de>). 

2005-10-22  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c: Decreased the maximum number of pixels 
          on a line for CIS scanners a bit to avoid border artifacts.

2005-10-22  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c backend/mustek_pp_cis.h
          doc/sane-mustek_pp.man: Added an optional engine_delay parameter
          to work around potential engine instability problems for CIS models.

2005-10-21  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Bumped build number.
	* backend/plustek-usbdevs.c: Fixed high-speed feature of
	  Canoscan D660U.

2005-10-20  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c: Fixes for 16 bit 
	  quality calibration by Simon Munton

2005-10-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added HP ScanJet 7650 and
	  UMAX Astra 2500.
	* doc/descriptions-external/brother2.desc: MFC-210C is reported to
	  work.
	* NEWS: Created entry for sane-backends 1.0.17.

2005-10-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* acinclude.m4 configure: Fixed check for libpthread functions.
	* tools/hotplug/libsane.usermap: Added Brother MFC 210C (from
	  Benjamin Mirza <bm1607@yahoo.de>). 
	* doc/descriptions-external/epkowa.desc: Updated for iscan 1.17.0
	  (patch from Olaf Meeuwissen <olaf@member.fsf.org>). Bug #302183.

2005-10-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Marked Michael Herder as not active. No activity since
	  some time, most email addresses bounce, no response to
	  pings. Changed contact address to the only one that doesn't
	  directly bounce.
	* backend/artec_eplus48u.conf: Added support for UMAX AstraSlim